# se-toolkit-lab-7

./: .env.docker.example  README.md  docker-compose.yml
backend/app/: main.py
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py
bot/services/: __init__.py  backend_client.py  llm_client.py
bot/tests/: test_handlers.py
